--- a/css/styles.css
+++ b/css/styles.css
@@ -1050,6 +1050,14 @@ body {
   color: var(--text-dark);
 }
 
+.modal-statement-link:active,
+.modal-statement-link:focus,
+.modal-statement-link:hover {
+  color: var(--link-color);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .checkbox {
   appearance: none;
   position: relative;
