--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,7 @@ body {
   --label-color: #2f303acc;
   --overlay-color: #2196f3e5;
   --btn-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  --input-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   --text-comment-color: rgba(117, 117, 117, 0.5);
 }
 
@@ -970,11 +971,19 @@ body {
   color: var(--text-light);
 }
 
-.modal-header {
-  width: 448px;
+.form-group {
+  /* height: 342px; */
+  margin-bottom: -8px;
+  padding: 0;
+}
 
-  margin-top: 2px;
+.modal-header {
+  position: relative;
+  width: 448px;
+  height: 23px;
+  margin-top: -4px;
   margin-bottom: 12px;
+  padding: 0;
   font-family: inherit;
   font-style: inherit;
   font-weight: 700;
@@ -996,13 +1005,14 @@ body {
   letter-spacing: 0.01em;
 
   color: var(--text-dark);
+  margin: 0;
+  padding: 0;
 }
 
 .form-input-field {
   width: 448px;
   height: 40px;
-  margin-top: 4px;
-  margin-bottom: 10px;
+  margin: 0 0 10px 0;
   padding: 0;
   padding-left: 42px;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -1013,8 +1023,7 @@ body {
   resize: none;
   width: 448px;
   height: 120px;
-  margin-top: 4px;
-  margin-bottom: 20px;
+  margin: 0;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
 
@@ -1031,16 +1040,20 @@ body {
 }
 
 .statement {
-  width: fit-content;
+  width: 420px;
+  /* height: 24px; */
   margin-left: 15px;
   margin-right: 16px;
+  margin-top: 20px;
+  margin-bottom: 0;
   display: flex;
   flex-direction: row;
   justify-content: center;
-  gap: 7px;
+  /* gap: 7px; */
 }
 
 .modal-statement {
+  display: block;
   font-family: inherit;
   font-style: inherit;
   font-weight: 400;
@@ -1048,6 +1061,7 @@ body {
   line-height: 1.71em;
   letter-spacing: 0.03em;
   color: var(--text-dark);
+  margin-left: 7px;
 }
 
 .modal-statement-link:active,
@@ -1080,9 +1094,10 @@ body {
   -webkit-appearance: none;
 }
 .checkbox:checked {
-  border: transparent;
+  outline: transparent;
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg width='16' height='15' viewBox='0 0 16 15' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='16' height='15' rx='2' fill='%232196F3'/%3E%3Cpath d='M3.95703 7.75166L3.88825 7.68604L3.81923 7.75141L2.93123 8.59258L2.85486 8.66492L2.93097 8.73753L6.42671 12.0724L6.49574 12.1382L6.56476 12.0724L14.069 4.91352L14.1449 4.84116L14.069 4.76881L13.1873 3.92764L13.1183 3.86183L13.0493 3.92761L6.49577 10.1735L3.95703 7.75166Z' fill='white' stroke='white' stroke-width='0.2'/%3E%3C/svg%3E");
 }
+
 .checkbox:hover,
 .checkbox:focus {
   outline: 1px solid var(--icon-select-color);
@@ -1153,6 +1168,7 @@ body {
 .form-input-field:focus,
 .form-input-field:active {
   border: 1px solid var(--icon-select-color);
+
   fill: var(--icon-select-color);
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
