--- a/css/styles.css
+++ b/css/styles.css
@@ -84,6 +84,8 @@ body {
   color: var(--link-color);
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+  outline: none;
 }
 
 .header-link {
@@ -104,6 +106,8 @@ body {
   color: var(--link-color);
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+  outline: none;
 }
 
 .header-link::after {
@@ -142,6 +146,8 @@ body {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   cursor: pointer;
+
+  outline: none;
 }
 
 .header-contact-elmnt {
@@ -165,6 +171,8 @@ body {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   cursor: pointer;
+
+  outline: none;
 }
 
 .header-contact-elmnt:not(:last-child) {
@@ -177,6 +185,8 @@ body {
   color: var(--link-color);
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+  outline: none;
 }
 
 .subcontainer {
@@ -257,6 +267,8 @@ body {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   cursor: pointer;
+
+  outline: none;
 }
 
 /* trumps */
@@ -414,6 +426,8 @@ body {
   transition: 0.2s;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+  outline: none;
 }
 
 .client-icon {
@@ -432,6 +446,8 @@ body {
   fill: var(--icon-select-color);
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+  outline: none;
 }
 
 .light-section-icon {
@@ -449,6 +465,8 @@ body {
   fill: var(--icon-select-color);
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+  outline: none;
 }
 
 .footer {
@@ -513,6 +531,8 @@ body {
   color: var(--link-color);
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+  outline: none;
 }
 
 .footer-address:active,
@@ -521,6 +541,8 @@ body {
   color: var(--link-color);
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+  outline: none;
 }
 
 .footer-contact:active,
@@ -529,6 +551,8 @@ body {
   color: var(--link-color);
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+  outline: none;
 }
 
 /* filters */
@@ -575,6 +599,8 @@ body {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   cursor: pointer;
+
+  outline: none;
 }
 
 .button-section-btn:focus,
@@ -583,6 +609,8 @@ body {
   border-radius: 4px;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+  outline: none;
 }
 
 /* portfolio */
@@ -613,6 +641,8 @@ body {
   cursor: pointer;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+  outline: none;
 }
 
 .blue-description {
@@ -754,6 +784,7 @@ body {
 .close-btn:hover,
 .close-btn:focus {
   border: 1px solid var(--icon-select-color);
+  outline: none;
   transform: scale(1.5);
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -949,6 +980,8 @@ body {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   cursor: pointer;
+
+  outline: none;
 }
 
 .form-btn:active .icon-send,
@@ -1070,6 +1103,8 @@ body {
   color: var(--link-color);
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+  outline: none;
 }
 
 .checkbox {
@@ -1095,10 +1130,11 @@ body {
 }
 .checkbox:checked {
   outline: transparent;
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg width='16' height='15' viewBox='0 0 16 15' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='16' height='15' rx='2' fill='%232196F3'/%3E%3Cpath d='M3.95703 7.75166L3.88825 7.68604L3.81923 7.75141L2.93123 8.59258L2.85486 8.66492L2.93097 8.73753L6.42671 12.0724L6.49574 12.1382L6.56476 12.0724L14.069 4.91352L14.1449 4.84116L14.069 4.76881L13.1873 3.92764L13.1183 3.86183L13.0493 3.92761L6.49577 10.1735L3.95703 7.75166Z' fill='white' stroke='white' stroke-width='0.2'/%3E%3C/svg%3E");
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg width='16' height='15' viewBox='0 0 16 15' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='16' height='115' rx='2' fill='%232196F3'/%3E%3Cpath d='M3.95703 7.75166L3.88825 7.68604L3.81923 7.75141L2.93123 8.59258L2.85486 8.66492L2.93097 8.73753L6.42671 12.0724L6.49574 12.1382L6.56476 12.0724L14.069 4.91352L14.1449 4.84116L14.069 4.76881L13.1873 3.92764L13.1183 3.86183L13.0493 3.92761L6.49577 10.1735L3.95703 7.75166Z' fill='white' stroke='white' stroke-width='0.2'/%3E%3C/svg%3E");
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.checkbox:hover,
 .checkbox:focus {
   outline: 1px solid var(--icon-select-color);
   transition-duration: 250ms;
@@ -1134,6 +1170,8 @@ body {
 .send-btn:focus,
 .send-btn:hover {
   background: var(--background-light);
+
+  outline: none;
   color: inherit;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
